Fix letter-spacing for mobile footer

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ footer {
   line-height: 1.1666666667;
   font-weight: 600;
   text-transform: uppercase;
-  letter-spacing: 0.5;
+  letter-spacing: 0.25;
   -webkit-animation: fadeIn 1.25s both 1s;
      -moz-animation: fadeIn 1.25s both 1s;
        -o-animation: fadeIn 1.25s both 1s;
